Sun Feb 29 10:02:51 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: Make gdm know about en_DK

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* gui/gdmlanguages.c (languages): 

	* config/locale.alias: Add Canadian English (fixes #135053) --
	patch by Adam Weinberger <adamw@freebsd.org>.

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* config/locale.alias: Add Serbian variants (#135232).

	* gui/gdmlanguages.c (languages): Added Serbian variants (#135232).

Tue Feb 24 14:44:29 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: lookup if we have code.enc@mod, try
	  code@mod after code.enc@mod and before code.enc and code
	  adresses #135232

2004-02-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

Fri Feb 20 10:03:42 2004  George Lebl <jirka@5z.com>

	* display.c, server.[ch], slave.c: When restarting a server by
	  whacking it and starting it again, wait at least one second to
	  allow things to "settle".  If local display is busy try again once
	  in 2 secs before resorting to telling the user so.  Be much milder
	  in whacking X's lock files / sockets to avoid whacking actual
	  locks / sockets when displays are in fact busy and used, that is,
	  only whack locks / sockets when we in fact successfully started
	  a server.

THu Feb 19 Guntupalli Karunakar <karunakar@freedomink.org>

	* gui/gdmlanguages.c: Fixes #134372, Hindi was incorrectly
	  written Bengali script instead of Devanagari script.

Thu Feb 12 11:49:20 2004  George Lebl <jirka@5z.com>

	* daemon/display.c, daemon/errorgui.c, daemon/gdm.[ch],
	  daemon/server.c, daemon/slave.c, daemon/xdmcp.c,
	  gui/gdmchooser.c, gui/gdmlogin.c, gui/gdmsetup.c,
	  gui/greeter/greeter.c: Fixup the theme changing.  Add keys
	  GtkTheme, AllowGtkThemeChange and GtkThemesToAllow to control
	  this behaviour better.

	* docs/C/gdm.xml, config/gdm.conf.in: Update for the above changes
	  adding the GtkTheme, AllowGtkThemeChange and GtkThemesToAllow
	  keys
