@@ -1,3 +1,10 @@
+Sun Feb 29 10:30:35 2004  George Lebl <jirka@5z.com>
+
+	* gui/greeter/greeter.c, gui/greeter/greeter_action_language.[ch]:
+	  While investigating speed issues with language dialog make init
+	  lazy and show the dialog before filling it with stuff to make it
+	  seem like something is happening.
+
 Sun Feb 29 10:02:51 2004  George Lebl <jirka@5z.com>
 
 	* gui/gdmlanguages.c: Make gdm know about en_DK
